--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   },
   "homepage": "https://github.com/steffisbootcampdrive/CRM#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
     "install": "^0.13.0",
     "mysql2": "^2.1.0",
+    "node-addon-api": "^3.0.0",
+    "node-pre-gyp": "^0.14.0",
+    "nodeunit": "^0.11.3",
     "passport": "^0.4.1",
     "sequelize": "^5.21.8"
   }
