--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/steffisbootcampdrive/CRM#readme",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "connect-session-sequelize": "^6.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
