--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/steffisbootcampdrive/CRM#readme",
   "dependencies": {
+    "aws-sdk": "^2.679.0",
     "bcrypt": "^4.0.1",
+    "connect-session-sequelize": "^6.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
     "install": "^0.13.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "node-addon-api": "^3.0.0",
     "node-pre-gyp": "^0.14.0",
