--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-pre-gyp": "^0.14.0",
     "nodeunit": "^0.11.3",
     "passport": "^0.4.1",
-    "sequelize": "^5.21.8"
+    "sequelize": "^5.21.8",
+    "twilio": "^3.43.1"
   }
 }
